--- a/index.css
+++ b/index.css
@@ -106,19 +106,26 @@
   .page2 img{
     width: 500px;
   }
-  
-  .page2 button{
+
+  .image1 button{
     width: 400px;
     height: 80px;
-    border: none;
+    border: 10px solid rgb(238, 92, 13);
     border-radius: 10px;
     background-color: rgb(238, 92, 13);
+    cursor: pointer;
     font-size: 40px;
     font-weight: 600;
+    transition: 0.3s;
     color: white;
     margin-top: 70px;
   }
-  
+
+  .image1 button:hover{
+    background-color: white;
+    color: rgb(238, 92, 13);
+  }
+
   .text2{
     display: flex;
     flex-direction: column;
@@ -168,15 +175,22 @@
     color: white;
   }
   
-  .page3 button{
+  .page3 button {
     width: 330px;
     height: 90px;
-    border: 13px solid white;
+    border: 10px solid white;
     border-radius: 10px;
     background-color: rgb(238, 92, 13);
+    cursor: pointer;
+    transition: 0.3s;
     font-size: 35px;
     font-weight: 600;
     color: white;
+  }
+
+  .page3 button:hover {
+    background-color: white;
+    color: rgb(238, 92, 13); 
   }
   
   .image2{
