--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
   header {
     background-image: url(https://cdn.glitch.com/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2Forange-and-yellow-packrafts-rubber-boats-FVW54MR.jpg);
     background-size: cover;
+    height: 100%;
     position: relative;
   }
 
@@ -15,7 +16,6 @@
     display: block;
     width: 100%;
     height: 100%;
-    /*background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));*/
     background-color: #000;
     background-size: cover;
     opacity: 0.3;
@@ -59,7 +59,7 @@
     justify-content: center;
   }
   
-  .container p{
+  .container p {
     font-size: 27px;
     color: white;
     width: 680px;
@@ -67,20 +67,24 @@
     margin-bottom: 70px;
   }
   
-  .container2{
-    padding: 60px 70px;
-    font-family: Montserrat;
-    background-image: url(https://cdn.glitch.com/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2Filustrasi%20rafting.png?v=1633221082982);
+  .container2 {
+    background-image: url(https://cdn.glitch.com/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2Filustrasi%20rafting.png);
+    position: relative;
     background-size: cover;
+    width: 100%;
+    height: 500px;
   }
-  
+
   .page1 h1{
+    padding-top: 30px;
+    padding-left: 60px;
     font-size: 60px;
     color: rgb(238, 141, 13);
-    margin-bottom: 70px;
+    margin-bottom: 35px;
   }
   
   .page1 p{
+    padding-left: 60px;
     width: 630px;
     line-height: 47px;
     font-size: 23px;
