--- a/faq.css
+++ b/faq.css
@@ -1,14 +1,125 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background-color: #F15A24;
+  /* background-color: #f15a24; */
   font-family: "Montserrat";
+  /* padding: 2em 6em; */
+}
+
+header {
+  background-image: url(https://cdn.glitch.me/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2Friver-wide.jfif?v=1636543596195);
+  background-size: cover;
+  /* background-position: -70px -5px; */
+  position: relative;
+  width: 100%;
+  height: 300px;
+  padding-bottom: 25px;
+}
+
+header::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  background-size: cover;
+  opacity: 0.6;
+  position: absolute;
+  bottom: 0;
+}
+
+.container {
+  position: relative;
+  z-index: 1;
+  padding: 40px 150px;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 170px;
+}
+
+.navbar img {
+  width: 190px;
+}
+
+.navbar-items ul li {
+  display: inline-block;
+}
+
+.navbar-items a {
+  font-size: 30px;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  margin-left: 70px;
+  position: relative;
+  padding: 0.5rem;
+}
+
+.navbar-items a::after,
+.navbar-items a::before {
+  transition: all 0.5s;
+}
+
+.navbar-items a::after {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+  width: 100%;
+  height: 0px;
+  content: ".";
+  color: transparent;
+  background: rgb(238, 141, 13);
+  visibility: none;
+  opacity: 0;
+  z-index: -1;
+}
+
+.navbar-items a:hover::after {
+  opacity: 1;
+  visibility: visible;
+  height: 100%;
+}
+
+.container h1 {
+  margin-top: -15%;
+  font-size: 110px;
+  color: white;
+  text-align: center;
+  margin-bottom: 220px;
+}
+
+.text1 {
+  display: flex;
+  justify-content: center;
+}
+
+.container p {
+  font-size: 27px;
+  color: white;
+  width: 680px;
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.content {
+  background-color: #f15a24;
   padding: 2em 6em;
 }
 h1 {
   color: #fff;
   text-align: center;
 }
-.header {
-}
+/* .header {
+} */
 /*--------Accordion-------*/
 .acc-kontainer {
   width: 100%;
@@ -84,42 +195,41 @@ h1 {
   margin-top: -50px;
   z-index: 2;
 }
+
+/* .footer {
+  width: 100%;
+  background-color: white;
+} */
+
 .container5 {
   padding: 50px 70px 70px 70px;
   font-family: Montserrat;
-  width: 100vw;
 }
 
 footer {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  background-color: white;
 }
 
 footer img {
   width: 180px;
-  background-color: white;
 }
 
 footer h1 {
   font-family: "Bungee", cursive;
   color: rgb(238, 92, 13);
-  background-color: white;
 }
 
 footer h3 {
   color: rgb(238, 92, 13);
   line-height: 30px;
-  background-color: white;
-  background-color: white;
 }
 
 footer p {
   line-height: 30px;
   font-size: 20px;
   color: rgb(238, 141, 13);
-  background-color: white;
 }
 
 .contact {
@@ -147,21 +257,4 @@ footer p {
   color: rgb(238, 141, 13);
   text-align: center;
   font-family: Montserrat;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.7);
-  transition: opacity 500ms;
-  visibility: hidden;
-  opacity: 0;
-}
-
-.overlay:target {
-  visibility: visible;
-  opacity: 1;
 }
