--- a/index.css
+++ b/index.css
@@ -5,14 +5,17 @@
 }
 
 header {
-  background-image: url(https://cdn.glitch.com/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2Forange-and-yellow-packrafts-rubber-boats-FVW54MR.jpg);
+  background-image: url(https://cdn.glitch.me/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2Forange-and-yellow-packrafts-rubber-boats-FVW54MR.jpg?v=1636543612249);
   background-size: cover;
-  height: 100%;
+  background-position: 0 25%;
   position: relative;
+  width: 100%;
+  height: 300px;
+  padding-bottom: 350px;
 }
 
 header::after {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 100%;
@@ -26,7 +29,7 @@ header::after {
 .container {
   position: relative;
   z-index: 1;
-  padding: 40px 70px;
+  padding: 40px 150px;
 }
 
 .navbar {
@@ -67,7 +70,7 @@ header::after {
   margin: auto;
   width: 100%;
   height: 0px;
-  content: '.';
+  content: ".";
   color: transparent;
   background: rgb(238, 141, 13);
   visibility: none;
@@ -82,10 +85,22 @@ header::after {
 }
 
 .container h1 {
-  font-size: 110px;
+  margin-top: -8%;
+  letter-spacing: 2px;
+  font-size: 70px;
   color: white;
   text-align: center;
   margin-bottom: 220px;
+}
+
+.textpembuka {
+  text-align: center;
+  margin-left: 16%;
+}
+
+.textpembuka p {
+  color: white;
+  margin-top: -15%;
 }
 
 .text1 {
@@ -104,6 +119,8 @@ header::after {
 .container2 {
   background-image: url(https://cdn.glitch.com/fc7312bd-34f2-4704-839d-e839fd4b4cb8%2Filustrasi%20rafting.png);
   position: relative;
+  margin-top: -35%;
+  /* background-position: 0 50% !important; */
   background-size: cover;
   width: 100%;
   height: 500px;
@@ -266,7 +283,7 @@ footer img {
 }
 
 footer h1 {
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
   color: rgb(238, 92, 13);
 }
 
